# DuckovTogether-Server

./: .gitignore  DISCLAIMER.md  DuckovTogetherServer.csproj  LICENSE  Program.cs  README.md  server_config.json.example
Core/: PlayerState.cs  ServerConfig.cs
Core/Assets/: GamePathDetector.cs  UnityAssetReader.cs
Core/GameLogic/: AIEntity.cs  AIManager.cs  GameServer.cs  ItemManager.cs
Core/Save/: ServerSaveManager.cs
Core/Security/: DuckovGuard.cs  ValidationService.cs
Core/Sync/: ClientRequestHandler.cs  SyncManager.cs
Core/World/: WorldStateManager.cs
Native/: CMakeLists.txt  build.bat  duckov_guard.exp  duckov_guard.lib
Native/include/: duckov_guard.h
Native/src/: duckov_guard.cpp
Net/: HeadlessNetService.cs  MessageHandler.cs
